backrop filter bugs on mobile

--- a/views/lowLatencyMode/src/css/main.css
+++ b/views/lowLatencyMode/src/css/main.css
@@ -60,11 +60,8 @@ body {
     top: 4px;
     right: 2.5rem;
     left: 2.5rem;
-    /*background-color: #2c2c2c;*/
+    background-color: #e6e6de;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-    /* Set your shadow properties */
-    backdrop-filter: blur(5px);
-    /* Adjust the blur value as needed */
     border-radius: 5px;
     height: 40px;
     padding: 10px;
